z-index fix

--- a/styles/widgets/common/gantt.less
+++ b/styles/widgets/common/gantt.less
@@ -28,7 +28,7 @@
         width: 100%;
 
         .dx-scrollable-scrollbar {
-            z-index: 10000;
+            z-index: 100;
         }
     }
 }
